Fix crash when annotation dialog is closed without saving...

...and the user then opens the context menu in the viewer window.

BUG: 474151